--- a/BankingSoftware/BankingSoftware.csproj
+++ b/BankingSoftware/BankingSoftware.csproj
@@ -67,8 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bootsrap\bootstrap.min.css" />
+    <Content Include="bootstrap\bootstrap.min.css" />
+    <Content Include="imgs\banner.jpg" />
     <Content Include="Web.config" />
+    <Content Include="homepage.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Home.Master.cs">
@@ -79,6 +81,13 @@
       <DependentUpon>Home.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="homepage.aspx.cs">
+      <DependentUpon>homepage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="homepage.aspx.designer.cs">
+      <DependentUpon>homepage.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Home.Master" />
