--- a/BankingSoftware/Web.config
+++ b/BankingSoftware/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <connectionStrings>
+    <add name="con" connectionString="Data Source=UZUNOVPC\SQLEXPRESS;Initial Catalog=BankingSoftware; Integrated Security=true" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
