--- a/BankingSoftware/BankingSoftware.csproj
+++ b/BankingSoftware/BankingSoftware.csproj
@@ -16,7 +16,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44393</IISExpressSSLPort>
+    <IISExpressSSLPort>44343</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -68,10 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bootstrap\bootstrap.min.css" />
+    <Content Include="bootstrap\cards.css" />
     <Content Include="imgs\banner.jpg" />
     <Content Include="Web.config" />
     <Content Include="homepage.aspx" />
     <Content Include="signup.aspx" />
+    <Content Include="myCards.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Home.Master.cs">
@@ -95,6 +97,13 @@
     </Compile>
     <Compile Include="signup.aspx.designer.cs">
       <DependentUpon>signup.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="myCards.aspx.cs">
+      <DependentUpon>myCards.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="myCards.aspx.designer.cs">
+      <DependentUpon>myCards.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
