--- a/BankingSoftware/Web.config
+++ b/BankingSoftware/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="con" connectionString="Data Source=STILYAN-PC\SQLEXPRESS;Initial Catalog=BankingSoftware; Integrated Security=true" />
+    <add name="con" connectionString="Data Source=STILYAN11111-PC\SQLEXPRESS;Initial Catalog=BankingSoftware; Integrated Security=true" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
